[tool.poetry]
name = "cmdr"
version = "0.1.0"
description = "Core Model for Data Research (Tentative)"
authors = ["My Name <my-name@my-org.org>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/cmdr/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
SQLAlchemy = "^1.4.32, !=1.4.46"
linkml-transformer = "^0.1"


[tool.poetry.group.dev.dependencies]
linkml-renderer = "^0.1.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^1.1.1"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
